@@ -22,7 +22,7 @@ function DS:new(object)
 	t.ent = object
 	if object.last_user == nil then return end
 	t.player = object.last_user.name
-	t.MF = getMF(t.player)
+	t.MF = getMFBySurface(object.surface)
 	t.entID = object.unit_number
 	t.dataNetwork = t.MF.dataNetwork
 	t.dataNetwork.dataStorageTable[object.unit_number] = t
