@@ -24,7 +24,7 @@ function DSR:new(object)
 	t.ent = object
 	if object.last_user == nil then return end
 	t.player = object.last_user.name
-	t.MF = getMF(t.player)
+	t.MF = getMFBySurface(object.surface)
 	t.entID = object.unit_number
 	t.ID = Util.getEntID(global.deepStorageTable)
 	t.MF.dataNetwork.DSRTable[object.unit_number] = t
