@@ -21,12 +21,13 @@ function JC:new(object)
 	t.ent = object
 	if object.last_user == nil then return end
 	t.player = object.last_user.name
-	t.MF = getMF(t.player)
+	t.MF = getMFBySurface(object.surface)
 	t.entID = object.unit_number
 	-- Draw the Light Sprite --
 	t.lightID = rendering.draw_light{sprite="JumpChargerL", target=object, surface=object.surface, minimum_darkness=0}
 	-- Save the Jump Charger inside the Jump Drive Table --
 	t.MF.jumpDriveObj.jumpChargerTable[object.unit_number] = t
+	dprint(table_size(t.MF.jumpDriveObj.jumpChargerTable))
 	UpSys.addObj(t)
 	return t
 end
