@@ -9,6 +9,10 @@ Date: 27/11/2020
     - Added a New GUI: The Switch GUI, allows you to rename your Mobile Factory or select another one as a "Main" Mobile Factory
     - The Main GUI shows now the Information about the Selected Mobile Factory
     - The Information GUI shows now the Information about the Selected Mobile Factory
+    - Deep Storages are added to the Mobile Factory where it is placed
+    - Deep Tanks are added to the Mobile Factory where it is placed
+    - Data Storages are added to the Mobile Factory where it is placed
+    - Jump Chargers are added to the Mobile Factory where it is placed
   Bugfixes:
     - Fixed crash on Sync area ghost placing (Honktown)
     - The GUI of other Players Mobile Factory now works correctly
